# FLEXMD

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml
.github/: funding.yml
api/: server.py
cache/: molecules.jsonl  molecules.jsonl.idx
demo/: index.html
plugins/: lammps_reax_md.py  psi4.py  smirnoff.py
scripts/: demo_spacefill_snapshot.sh  everything.sh  fetch_gifjs.sh  hydrogen_oxygen.sh  test_all.sh  test_ghs.sh  test_hydroxide.sh  test_identity.sh  test_mmdfled.sh  test_props.sh  test_psi4.sh  test_reaxff_dtguard.sh  test_smirnoff.sh  test_spacefill_kit.sh
simulation/: engine_core.py  integrators.py  plugin_interface.py  plugin_manager.py  plugin_selector.py  system.py  thermo.py  thermostats.py
utilities/: ID.py  cache.py  config.py  connectivity.py  discord_webhook.py  ffield_utils.py  ghs.py  identify.py  logging_utils.py  names.py  physprops.py  radii.py  spacefill_kit.py  status.py
